lab2/services/service_js/service-js-2/service-js-2-destination.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service2-destination
spec:
  host: service-js-2-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 10
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 80
